package work02;

import work02.Line.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}